Fix left nav on tablet/mobile [Issue #80]

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -918,28 +918,42 @@ nav.secondary {
 .mobile-toggle--aside {
   display: none;
   cursor: pointer;
-  position: absolute;
+  position: relative;
+  margin-bottom: 30px;
   z-index: 999;
-  top: 12px;
-  left: 4%; }
+  top: -10px;
+  left: 9%; }
+  .mobile-toggle--aside.has-open-nav {
+    left: 0; }
 
+/*
 .mobile-toggle--aside-alt {
   display: none;
   cursor: pointer;
   position: absolute;
   bottom: 20px;
-  left: 4%; }
-
+  left: 9%;
+}
+*/
 .mobile-toggle--aside .text,
 .mobile-toggle--aside .text--close,
 .mobile-toggle--aside-alt .text,
 .mobile-toggle--aside-alt .text--close {
-  position: absolute;
-  top: -1px;
-  left: 40px;
-  font-weight: 700;
-  font-size: 1.15em;
-  color: #23abe3; }
+  position: absolute !important;
+  top: -9px !important;
+  left: 45px !important;
+  font-weight: 700 !important;
+  font-size: 22px !important;
+  color: #23abe3 !important;
+  background: transparent !important; }
+  .mobile-toggle--aside .text:before, .mobile-toggle--aside .text:after,
+  .mobile-toggle--aside .text--close:before,
+  .mobile-toggle--aside .text--close:after,
+  .mobile-toggle--aside-alt .text:before,
+  .mobile-toggle--aside-alt .text:after,
+  .mobile-toggle--aside-alt .text--close:before,
+  .mobile-toggle--aside-alt .text--close:after {
+    display: none; }
 
 .mobile-toggle--aside.has-open-nav .text {
   display: none; }
@@ -1309,7 +1323,17 @@ div.highlight {
       top: 0;
       width: 100%;
       left: -100%;
-      z-index: -100; }
+      z-index: 200; }
+    @media screen and (max-width: 1119px) {
+      .interior-content aside div:not(.mobile-toggle--aside):not(.mobile-toggle--aside-alt):after {
+        content: '';
+        position: absolute;
+        background: #524740;
+        height: 100%;
+        top: 0;
+        width: 100%;
+        right: -100%;
+        z-index: 200; } }
   .interior-content aside div:not(.mobile-toggle--aside):not(.mobile-toggle--aside-alt) a {
     color: white; }
     .interior-content aside div:not(.mobile-toggle--aside):not(.mobile-toggle--aside-alt) a:hover {
@@ -1368,7 +1392,7 @@ div.highlight {
   .interior-content aside.is-open {
     height: auto;
     background: #fff;
-    padding: 1.5em 4% 3em;
+    padding: 1.5em 9% 3em;
     left: 0;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15); } }
 
