--- a/docs/assets/sass/_theme.scss
+++ b/docs/assets/sass/_theme.scss
@@ -141,30 +141,43 @@ nav.secondary {
 .mobile-toggle--aside {
   display: none;
   cursor: pointer;
-  position: absolute;
+  position: relative;
+  margin-bottom: 30px;
   z-index: 999;
-  top: 12px;
-  left: 4%;
+  top: -10px;
+  left: 9%;
+
+  &.has-open-nav {
+    left: 0;
+  }
 }
 
+/*
 .mobile-toggle--aside-alt {
   display: none;
   cursor: pointer;
   position: absolute;
   bottom: 20px;
-  left: 4%;
+  left: 9%;
 }
+*/
 
 .mobile-toggle--aside .text, 
 .mobile-toggle--aside .text--close,
 .mobile-toggle--aside-alt .text, 
 .mobile-toggle--aside-alt .text--close {
-  position: absolute;
-  top: -1px;
-  left: 40px;
-  font-weight: 700;
-  font-size: 1.15em;
-  color: #23abe3;
+  position: absolute !important;
+  top: -9px !important;
+  left: 45px !important;
+  font-weight: 700 !important;
+  font-size: 22px !important;
+  color: #23abe3 !important;
+  background: transparent !important;
+
+  &:before,
+  &:after {
+    display: none;
+  }
 }
 
 .mobile-toggle--aside.has-open-nav .text {
